@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 
+* Preview of PDF files encapsulated in DICOM from Orthanc Explorer
 * Creation of DICOM files with encapsulated PDF through "/tools/create-dicom"
 * "limit" and "since" arguments while retrieving DICOM resources in the REST API
 * Support of "deflate" and "gzip" content-types in HTTP requests
